--- a/SchoolBook/SchoolBook/SchoolBook.csproj
+++ b/SchoolBook/SchoolBook/SchoolBook.csproj
@@ -99,9 +99,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CreateStudyGroupaspx.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Homepage.aspx" />
+    <Content Include="LeaveStudyGrp.aspx" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -120,13 +120,6 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateStudyGroupaspx.aspx.cs">
-      <DependentUpon>CreateStudyGroupaspx.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="CreateStudyGroupaspx.aspx.designer.cs">
-      <DependentUpon>CreateStudyGroupaspx.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -140,6 +133,13 @@
     </Compile>
     <Compile Include="Homepage.aspx.designer.cs">
       <DependentUpon>Homepage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="LeaveStudyGrp.aspx.cs">
+      <DependentUpon>LeaveStudyGrp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LeaveStudyGrp.aspx.designer.cs">
+      <DependentUpon>LeaveStudyGrp.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
