--- a/SchoolBook/SchoolBook/SchoolBook.csproj
+++ b/SchoolBook/SchoolBook/SchoolBook.csproj
@@ -107,6 +107,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Site1.Master" />
+    <Content Include="Join Study Group.aspx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -122,7 +123,6 @@
   <ItemGroup>
     <Compile Include="CreateStudyGroupaspx.aspx.cs">
       <DependentUpon>CreateStudyGroupaspx.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="CreateStudyGroupaspx.aspx.designer.cs">
       <DependentUpon>CreateStudyGroupaspx.aspx</DependentUpon>
@@ -148,6 +148,13 @@
     </Compile>
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Join Study Group.aspx.cs">
+      <DependentUpon>Join Study Group.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Join Study Group.aspx.designer.cs">
+      <DependentUpon>Join Study Group.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
