--- a/SchoolBook/SchoolBook/SchoolBook.csproj
+++ b/SchoolBook/SchoolBook/SchoolBook.csproj
@@ -99,20 +99,16 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-<<<<<<< HEAD
     <Content Include="AddCourse.aspx" />
-=======
-    <Content Include="CreateStudyGroupaspx.aspx" />
->>>>>>> origin/master
     <Content Include="Default.aspx" />
     <Content Include="Homepage.aspx" />
+    <Content Include="LeaveStudyGrp.aspx" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="RegisterAsTutor.aspx" />
     <Content Include="Site1.Master" />
-    <Content Include="Join Study Group.aspx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -127,20 +123,12 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-<<<<<<< HEAD
     <Compile Include="AddCourse.aspx.cs">
       <DependentUpon>AddCourse.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="AddCourse.aspx.designer.cs">
       <DependentUpon>AddCourse.aspx</DependentUpon>
-=======
-    <Compile Include="CreateStudyGroupaspx.aspx.cs">
-      <DependentUpon>CreateStudyGroupaspx.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="CreateStudyGroupaspx.aspx.designer.cs">
-      <DependentUpon>CreateStudyGroupaspx.aspx</DependentUpon>
->>>>>>> origin/master
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -155,6 +143,13 @@
     </Compile>
     <Compile Include="Homepage.aspx.designer.cs">
       <DependentUpon>Homepage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="LeaveStudyGrp.aspx.cs">
+      <DependentUpon>LeaveStudyGrp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LeaveStudyGrp.aspx.designer.cs">
+      <DependentUpon>LeaveStudyGrp.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterAsTutor.aspx.cs">
@@ -171,21 +166,12 @@
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
     </Compile>
-<<<<<<< HEAD
     <Compile Include="Updateprofile.aspx.cs">
       <DependentUpon>Updateprofile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Updateprofile.aspx.designer.cs">
       <DependentUpon>Updateprofile.aspx</DependentUpon>
-=======
-    <Compile Include="Join Study Group.aspx.cs">
-      <DependentUpon>Join Study Group.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Join Study Group.aspx.designer.cs">
-      <DependentUpon>Join Study Group.aspx</DependentUpon>
->>>>>>> origin/master
     </Compile>
   </ItemGroup>
   <ItemGroup>
